--- a/index.html
+++ b/index.html
@@ -145,6 +145,14 @@
       gap: 12px;
       grid-template-columns: 1fr 1fr;
     }
+	/* Core inputs gets more columns when full width */
+	.coregrid{
+	  grid-template-columns: 1fr 1fr 1fr;
+	}
+	@media (max-width: 980px){
+	  .coregrid{ grid-template-columns: 1fr; }
+	}
+
     @media (max-width: 980px){ .fieldgrid{grid-template-columns:1fr} }
 
     label{
@@ -447,7 +455,8 @@
 			<div class="badge" id="apiBadge"><span class="no"></span><span>API not checked yet</span></div>
 		  </div>
 
-		  <div class="fieldgrid">
+		  <div class="fieldgrid coregrid">
+
 			<div>
 			  <label>API Base URL</label>
 			  <input id="apiBase" placeholder="https://fire-api-wixz.onrender.com" />
@@ -469,7 +478,7 @@
 
     <!-- INPUTS -->
     <section id="tab-inputs" class="tabs" style="margin-top:18px;">
-      <div class="grid cols2">
+      <div class="grid">
         <!-- Core -->
         <div class="card">
           <div class="row">
@@ -486,7 +495,7 @@
           </div>
           <div class="hr"></div>
 
-          <div class="fieldgrid">
+          <div class="fieldgrid coregrid">
             <div>
               <label>Current Age</label>
               <input id="current_age" type="number" step="1" />
@@ -1526,6 +1535,7 @@ if ((text || "").trim().startsWith("<!DOCTYPE html")) {
 
 
 async function runModel(){
+  syncInputsFromUI();
   saveState();
   const base = (state.apiBase || "").replace(/\/+$/,"");
   if(!base){
@@ -2305,27 +2315,6 @@ function toNumber(v){
   return Number.isFinite(n) ? n : 0;
 }
 
-function toNumber(v){
-  if (v === null || v === undefined) return 0;
-
-  if (typeof v === "number") return Number.isFinite(v) ? v : 0;
-
-  if (typeof v === "string") {
-    const s = v.trim();
-    if (!s || s === "—" || s === "-") return 0;
-
-    const cleaned = s
-      .replace(/[$€£¥]/g, "")
-      .replace(/,/g, "")
-      .replace(/\s+/g, "");
-
-    const n = Number(cleaned);
-    return Number.isFinite(n) ? n : 0;
-  }
-
-  const n = Number(v);
-  return Number.isFinite(n) ? n : 0;
-}
 
 
 
